<resources>
    <string name="app_name">Surti Khaman House</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="left_menu_dashboard">Dashboard</string>
    <string name="left_menu_edit_dashboard">Edit Dashboard Data</string>
    <string name="left_menu_expenses">Expenses</string>
    <string name="left_menu_wholesale">Wholesale</string>
    <string name="left_menu_box_dashboard">Box Dashboard</string>
    <string name="left_menu_admin_pannel">Admin Panel</string>
    <string name="left_menu_info">Info</string>
    <string name="left_menu_edit_wholesale_dashboard">Edit Wholesale Data</string>
    <string name="left_menu_find_rupees">Find Rupees</string>
    <string name="left_menu_find_weight">Find Weight</string>

    <string name="app_tag_line">"Chakhi to juvo chahak bani jaso !"</string>
    <string name="app_version_name">0.0 (1)</string>

    <!-- Dashboard -->
    <string name="item">Item</string>
    <string name="weight">Weight</string>
    <string name="price">Price</string>
    <string name="item_">Item :</string>
    <string name="weight_">Weight :</string>
    <string name="price_">Price :</string>
    <string name="amount">Amount</string>
    <string name="view">View</string>
    <string name="reset">Reset</string>
    <string name="total">Total</string>
    <string name="grand_total">Grand Total</string>

    <!-- Receipt -->
    <string name="receipt">Receipt</string>
    <string name="bill">Bill</string>
    <string name="bill_no">Bill No</string>
    <string name="date_and_Time">Date and Time</string>
    <string name="print">Print</string>
    <string name="online">Online</string>
    <string name="cash">Cash</string>


    <!-- Shop Menu -->
    <string name="add">Add</string>
    <string name="add_item">Add Item</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="add_menu_item">Add Menu Item</string>
    <string name="Update_menu_item">Update Menu Item</string>
    <string name="enter_item_name">Enter Item Name<sup>*</sup></string>
    <string name="enter_fix_weight_for_1_kg">Enter Fix Weight For 1 KG<sup>*</sup></string>
    <string name="enter_fix_price_for_1_kg">Enter Fix Price For 1 KG<sup>*</sup></string>


    <!-- Expenses -->
    <string name="expenses">Expenses</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="update_expenses">Update Expenses</string>
    <string name="todays_expenses">Todays Expenses</string>
    <string name="enter_expenses_amount">Enter Expenses Amount</string>
    <string name="enter_expenses_note">Enter Note</string>
    <string name="submit">Submit</string>

    <!-- Send Mail -->
    <string name="send_mail">Send Mail</string>
    <string name="delete_file">Delete File</string>

    <!-- Wholesale -->
    <string name="wholesale">Wholesale</string>

    <!-- Box Dashboard -->
    <string name="box_dashboard">Box Dashboard</string>
    <string name="select_weights">Select Weights</string>
    <string name="weights_calculator">Weights Calculator</string>
    <string name="select_price">Select Price</string>
    <string name="price_calculator">Price Calculator</string>
    <string name="clear">Clear</string>
    <string name="enter">Enter</string>
    <string name="Done">Done</string>
    <string name="info">Info</string>
    <string name="equal_0">= 0</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_15">15</string>
    <string name="_20">20</string>
    <string name="_25">25</string>
    <string name="_30">30</string>
    <string name="_35">35</string>
    <string name="_40">40</string>
    <string name="_45">45</string>
    <string name="_50">50</string>
    <string name="_55">55</string>
    <string name="_60">60</string>
    <string name="_65">65</string>
    <string name="_70">70</string>
    <string name="_75">75</string>
    <string name="_80">80</string>
    <string name="_85">85</string>
    <string name="_90">90</string>
    <string name="_95">95</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="_250">250</string>
    <string name="_300">300</string>
    <string name="_350">350</string>
    <string name="_400">400</string>
    <string name="_450">450</string>
    <string name="_500">500</string>
    <string name="_550">550</string>
    <string name="_600">600</string>
    <string name="_650">650</string>
    <string name="_700">700</string>
    <string name="_750">750</string>
    <string name="_800">800</string>
    <string name="_850">850</string>
    <string name="_900">900</string>
    <string name="_950">950</string>
    <string name="_1000">1000</string>
    <string name="_2000">2000</string>
    <string name="_5000">5000</string>


    <!-- Password -->
    <string name="password">Password</string>
    <string name="info_password">Enter 10 digit password</string>
    <string name="wrong_password">Wrong Password !</string>

    <!-- Delete File -->
    <string name="delete_file_success">File deleted successfully</string>
    <string name="something_went_wrong">Something Went Wrong</string>

    <!-- Admin Panel -->
    <string name="admin_panel_status">Admin Login Status</string>
    <string name="admin_login_success">Logged In : TRUE </string>
    <string name="admin_login_unsuccess">Logged In : FALSE </string>
    <string name="login">LogIn</string>
    <string name="change_status">Change Status</string>

    <!-- Permission, Access all file permission -->
    <string name="folder_access_permission_details"> Go to "DOWNLOAD / SKH / ... "  \n\n Allow Surti Khaman House (SKH) application to access SKH Folder
        \n\n This will let app to access current and future content stored in SKH Folder  </string>
    <string name="permission">Permission (Download / SKH)</string>
    <string name="grant">Grant</string>
    <string name="cancel">Cancel</string>


    <!-- Info Page -->
    <string name="info_page">Info</string>
    <string name="privacy_policy_link">http://bit.ly/3S9BpZb</string>
    <string name="app_version_code">APP VERSION CODE</string>
    <string name="app_name_label">APP NAME</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="permission_used">PERMISSION USED</string>
<!--    Allow this app to read, modify and delete all files on this device or any connected storage volumes. If granted, app may access files without your explicit knowledge.-->
    <string name="permission_used_info">
        \n\nRead, Write and Bluetooth
        \n\n &#8226; BLUETOOTH
         \n &#8226; READ_EXTERNAL_STORAGE
         \n &#8226; WRITE_EXTERNAL_STORAGE
    </string>





</resources>