<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_left_menu_dashboard_24"
            android:title="@string/left_menu_dashboard" />
        <item
            android:id="@+id/nav_shop_menu"
            android:icon="@drawable/ic_edit_24"
            android:title="@string/left_menu_edit_dashboard" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_money_24"
            android:title="@string/todays_expenses" />
        <item
            android:id="@+id/nav_wholesale"
            android:icon="@drawable/ic_wholesale_icon_24"
            android:title="@string/wholesale" />
        <item
            android:id="@+id/nav_wholesale_menu"
            android:icon="@drawable/ic_edit_wholesale_24"
            android:title="@string/left_menu_edit_wholesale_dashboard" />
    </group>
</menu>