<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.surti.khaman.house.ui.dashboard.DashboardFragment"
        android:label="@string/left_menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_shop_menu"
        android:name="com.surti.khaman.house.ui.shop_menu.ShopMenuFragment"
        android:label="@string/left_menu_edit_dashboard"
        tools:layout="@layout/fragment_shop_menu" />

    <fragment
        android:id="@+id/nav_expenses"
        android:name="com.surti.khaman.house.ui.expense.ExpenseFragment"
        android:label="@string/left_menu_expenses"
        tools:layout="@layout/fragment_expense" />

    <fragment
        android:id="@+id/nav_wholesale"
        android:name="com.surti.khaman.house.ui.wholesale.WholesaleFragment"
        android:label="@string/left_menu_wholesale"
        tools:layout="@layout/fragment_wholesale" />
</navigation>
