<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/yellow_500">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_weights"
            android:gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

    <Button
        android:id="@+id/btn_close_popup"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:drawableBottom="@drawable/ic_cross_white_24" />

</RelativeLayout>
    </androidx.cardview.widget.CardView>

  <LinearLayout
      android:id="@+id/ll_et_show_weights"
      android:layout_below="@+id/card_header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
          android:id="@+id/tv_show_item_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textColor="@color/red_500"
          android:textStyle="bold"
          android:gravity="center"
          android:padding="6dp"
          android:text="@string/item"
          />


      <EditText
          android:id="@+id/et_history_calculation"
          android:layout_width="match_parent"
          android:layout_height="150dp"
          android:gravity="end"
          android:layout_margin="4dp"
          android:padding="8dp"
          android:textStyle="bold"
          android:enabled="false"
          android:textSize="20sp"
          android:textColor="@color/red_500"
          android:hint="HISTORY"
          android:background="@drawable/border_red_fill_white_rectangle"
          />

      <EditText
          android:id="@+id/et_final_result_weight"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="end"
          android:layout_margin="4dp"
          android:padding="8dp"
          android:textStyle="bold"
          android:enabled="false"
          android:textSize="22sp"
          android:textColor="@color/blue_500"
          android:text="= 0 gm"
          android:hint="0"
          android:background="@drawable/border_red_fill_white_rectangle"
          />
  </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_button_weights"
        android:layout_below="@+id/ll_et_show_weights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_first_row_weight_buttons"
        android:layout_below="@+id/ll_et_show_weights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_50"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_100"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_100"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_150"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_150"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_second_row_weight_buttons"
        android:layout_below="@+id/ll_first_row_weight_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_200"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_200"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_250"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_250"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_300"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_300"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_third_row_weight_buttons"
        android:layout_below="@+id/ll_second_row_weight_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_350"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_350"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_400"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_400"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_450"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_450"
            android:textStyle="bold"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_fourth_row_weight_buttons"
        android:layout_below="@+id/ll_third_row_weight_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_500"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_500"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_550"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_550"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_600"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_600"
            android:textStyle="bold"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_fifth_row_weight_buttons"
        android:layout_below="@+id/ll_fourth_row_weight_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_650"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_650"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_700"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_700"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_750"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_750"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sixth_row_weight_buttons"
        android:layout_below="@+id/ll_fifth_row_weight_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_800"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_800"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_850"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_850"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_900"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_900"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_seventh_row_weight_buttons"
        android:layout_below="@+id/ll_sixth_row_weight_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">


        <Button
            android:id="@+id/btn_950"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_950"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_1000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/_1000"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:text="@string/clear"
            android:backgroundTint="@color/red_500"
            android:drawableRight="@drawable/ic_clear_arrow_24"
            android:textStyle="bold"
            />
    </LinearLayout>

    </LinearLayout>





    <Button
        android:id="@+id/btn_done_selection_weight"
        android:layout_below="@+id/ll_button_weights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:padding="10dp"
        android:backgroundTint="@color/green_400"
        />
</RelativeLayout>