<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rl_main_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_500"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_close_popup"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:drawableBottom="@drawable/ic_cross_white_24" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_password_layout"
        android:layout_below="@+id/rl_main_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dynamic_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/red_500"
            android:layout_margin="6dp"
            android:text="@string/info_password"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=""
            android:inputType="number"
            android:textSize="22sp"
            android:textColor="@color/blue_500"
            android:textStyle="bold"
            android:background="@drawable/border_red_fill_white_rectangle"
            />

         <LinearLayout
             android:id="@+id/ll_first_row"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="3">

             <Button
                 android:id="@+id/btn_1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
                 android:layout_weight="1"
                 android:layout_margin="1dp"
                 android:text="@string/_1"
                 android:textStyle="bold"
                 />

             <Button
                 android:id="@+id/btn_2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
                 android:layout_weight="1"
                 android:layout_margin="1dp"
                 android:text="@string/_2"
                 android:textStyle="bold"
                 />

             <Button
                 android:id="@+id/btn_3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
                 android:layout_weight="1"
                 android:layout_margin="1dp"
                 android:text="@string/_3"
                 android:textStyle="bold"
                 />
         </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_second_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/_4"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/_5"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/_6"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_third_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/_7"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/_8"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/_9"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_fourth_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btn_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/info"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btn_0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/_0"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/clear"
                android:drawableRight="@drawable/ic_clear_arrow_24"
                android:backgroundTint="@color/red_500"
                android:textStyle="bold"
                />
        </LinearLayout>




    </LinearLayout>



</RelativeLayout>