<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_app_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name_label"
            android:textColor="@color/red_500"
            android:background="@color/yellow_100"
            android:padding="10dp"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/blue_500"
            android:background="@drawable/border_red_fill_white_rectangle"
            android:padding="10dp"
            android:layout_margin="6dp"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_version_code"
            android:textColor="@color/red_500"
            android:background="@color/yellow_100"
            android:layout_marginTop="6dp"
            android:padding="10dp"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_version_code"
            android:textColor="@color/blue_500"
            android:layout_margin="6dp"
            android:background="@drawable/border_red_fill_white_rectangle"
            android:padding="10dp"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:layout_marginTop="10dp"
            android:textColor="@color/red_500"
            android:background="@color/yellow_100"
            android:padding="10dp"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_link"
            android:autoLink="web"
            android:textColor="@color/blue_500"
            android:background="@drawable/border_red_fill_white_rectangle"
            android:padding="10dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_used"
            android:layout_marginTop="10dp"
            android:textColor="@color/red_500"
            android:background="@color/yellow_100"
            android:padding="10dp"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_permission_used"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_used_info"
            android:textColor="@color/blue_500"
            android:background="@drawable/border_red_fill_white_rectangle"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_margin="6dp"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>